--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-tangalanga!
+<p>tangalanga!</p>
 </body>
 </html>
