--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light"> <a class="navbar-brand" href="#">My Website</a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button> <div class="collapse navbar-collapse" id="navbarNav"> <ul class="navbar-nav"> <li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li> <li class="nav-item"> <a class="nav-link" href="#">About</a> </li> <li class="nav-item"> <a class="nav-link" href="#">Services</a> </li> <li class="nav-item"> <a class="nav-link" href="#">Contact</a> </li> </ul> </div> </nav>
+  
   <div class="jumbotron text-center"> <h1 class="display-4">Welcome to My Website</h1> <p class="lead">This is a simple hero unit, a jumbotron-style component for extra attention.</p> <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a> </div>
+  
+  <div class="container"> <div class="row"> <div class="col-md-4"> <h2>About</h2> <p>Information about your website or yourself.</p> </div> <div class="col-md-4"> <h2>Services</h2> <p>Details about the services you offer.</p> </div> <div class="col-md-4"> <h2>Contact</h2> <p>How visitors can get in touch with you.</p> </div> </div> </div>
+  
   <p>tangalanga!</p>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
